--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "PA1_template.Rmd"
-output: html_document
+output: 
+  html_document:
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
